too much for one commit
added an index page
added a new tool (mirage)
refactored a bunch of things to work with this modular system
fixed a bug with the preview renderer

--- a/main.css
+++ b/main.css
@@ -39,16 +39,25 @@ body {
     gap: 2rem;
 }
 
-.lyrics-container {
+.preview-container {
     position: absolute;
     pointer-events: none;
     font-weight: 800;
-    margin-top: 2rem;
+    margin-top: 0rem;
     gap: 0rem;
     padding: 0rem;
     height:160px;
     width:320px;
     background-color: #110911;
+}
+
+.preview-sizer {
+    display: inline-block;
+    height: 160px;
+    width: 320px;
+    gap: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .widther {
