--- a/index.css
+++ b/index.css
@@ -1,16 +1,15 @@
-.index-chapter {
-    display: flex;
-    flex-flow: row wrap;
-    font-size: 2rem;
-    margin: 2rem;
-    padding: 2rem;
-    background-color: #331A33;
-    max-width: 700px;
-}
-
 .chapter-root {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
+}
+
+.index-chapter {
+    display: inline-block;
+    font-size: 2rem;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: #331A33;
+    max-width: 720px;
 }
 
 .chapter-left {
@@ -18,9 +17,14 @@
     padding: 1rem;
 }
 
+.chapter-right {
+    max-width: 320px;
+    padding: 1rem;
+}
+
 .chapter-label {
     font-size: 2rem;
-    display:flex;
+    display: flex;
     justify-self: center;
 }
 
