--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ body {
     position: absolute;
     pointer-events: none;
     user-select: none;
+    align-content: center;
     text-align: center;
     font-weight: 800;
     margin-top: 0rem;
