--- a/mirage/mirage.css
+++ b/mirage/mirage.css
@@ -1,9 +1,17 @@
 .phrase {
     padding: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    background-color: #331933;
 }
 
 .util-container {
     margin: 1rem;
+}
+
+.phrase-config {
+    display: inline-block;
+    width: 70px;
 }
 
 /* .phrase-input {
